@@ -10,6 +10,8 @@ CONTEXTS_PER_SCHEMA=1000
 # possible values: context or user
 CREATE_CONTEXT_USE_UNIT=context
 
+CHECK_CONTEXT_LOGIN_MAPPING_REGEXP=[$%\\.+a-zA-Z0-9_-]
+
 # jmx server port 
 JMX_PORT=9998
 
