@@ -3,6 +3,7 @@
   - Bugfix ID#8543 rename of movedatabasecontext and movefilestorecontext
   - Bugfix ID#9004 unregisterserver operation by name missing
   - Bugfix ID#8993 clts should all be singular
+  - Bugfix ID#9007 Context login mappings not validated
   
 * 2007-08-20 - choeger@open-xchange.com
 
